--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://agoldvarg.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Better Living Through Code
+subtitle: Learning, and Tech Musings
+author: Alex Goldvarg
 simple_search: https://www.google.com/search
 description:
 
