Add period to sub-text

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://agoldvarg.github.io
 title: Better Living Through Code
-subtitle: Learning, and Tech Musings
+subtitle: Learning, and Tech Musings.
 author: Alex Goldvarg
 simple_search: https://www.google.com/search
 description:
